syntax = "proto2";
option java_multiple_files = true;
package org.redstone.protobuf.msg;

message JoinBattleRequest
{
  
}
